traces/bug_87.txt
examples++-load/symmetrizeCSR.cpp:74: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/symmetrizeCSR.cpp:74:1: initialization of callDoLoadInit
72.       Global.Add("symmetrizeCSR", "(", new OneOperator1_<long, Matrice_Creuse<std::complex<double> >* >(symmetrizeCSR<std::complex<double> >));
73.   }
74. > LOADFUNC(Load_Init)

examples++-load/symmetrizeCSR.cpp:74:1: call to DoLoadInit
72.       Global.Add("symmetrizeCSR", "(", new OneOperator1_<long, Matrice_Creuse<std::complex<double> >* >(symmetrizeCSR<std::complex<double> >));
73.   }
74. > LOADFUNC(Load_Init)

examples++-load/symmetrizeCSR.cpp:74:1: call to addInitFunct
  72.       Global.Add("symmetrizeCSR", "(", new OneOperator1_<long, Matrice_Creuse<std::complex<double> >* >(symmetrizeCSR<std::complex<double> >));
  73.   }
  74. > LOADFUNC(Load_Init)

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
